FIx cart alignment

--- a/src/HopitalNumerique/NewAccountBundle/Resources/public/css/cart.css
+++ b/src/HopitalNumerique/NewAccountBundle/Resources/public/css/cart.css
@@ -29,3 +29,27 @@ table.dataTable thead .cart-items-all::after {
 #my-account .icon.report-list-icon::before {
     content: "\f0ea";
 }
+
+
+#my-account .dataTables_wrapper {
+    margin: 15px;
+}
+
+#my-account .cart-add-to-report {
+    margin-right: 15px;
+}
+
+#my-account .cart .no-result,
+#my-account .new-report .new-report-items .no-result {
+    margin-top: 10px;
+}
+
+#my-account .new-report .new-report-items .item-line {
+    margin-left: 15px;
+    margin-right: 15px;
+    background: #fff;
+}
+
+#my-account .new-report .form-wrapper {
+    margin: 0 15px;
+}
